menambahkan cors, mengupdate userControllers, dan update apiDocs.yaml
